deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marvin
  labels:
    istio-injection: enabled
