deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marvin
  namespace: marvin
  labels:
    app: marvin
spec:
  selector:
    app: marvin
  ports:
    # Traffic goes through oauth2-proxy sidecar
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
